--- a/index.html
+++ b/index.html
@@ -5,28 +5,133 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
-  <header class="border-bottom p-4">
+  <div class="container">
+    <header class="p-4">
+  
+      <h1>Men's<span>Clothes</span></h1>
+  
+        <nav class="nav">
+          <a class="nav-link ps-0" href="#">Home</a>
+          <a class="nav-link border-start" href="#">Wish List(0)</a>
+          <a class="nav-link border-start" href="#">My Account</a>
+          <a class="nav-link border-start" href="#">Shopping Cart</a>
+          <a class="nav-link border-start" href="#">Checkout</a>
+        </nav>
+    </header>
 
-    <h1>Men's<span class="text-black-50">Clothes</span></h1>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="navbar-nav">
-        <a class="nav-link active ps-0" href="#">Home</a>
-        <a class="nav-link border-start" href="#">Wish List(0)</a>
-        <a class="nav-link border-start" href="#">My Account</a>
-        <a class="nav-link border-start" href="#">Shopping Cart</a>
-        <a class="nav-link border-start" href="#">Checkout</a>
+  </div>
+  <hr>
+
+  <div class="container">
+    <div class="menu p-4">
+      <nav class="nav bg-dark p-2">
+        <a class="nav-link" href="#">Tops</a>
+        <a class="nav-link" href="#">Sweaters</a>
+        <a class="nav-link" href="#">Jeans</a>
+        <a class="nav-link" href="#">Coats & Jackets</a>
+        <a class="nav-link" href="#">Activewear</a>
+        <a class="nav-link" href="#">Shorts</a>
+        <a class="nav-link" href="#">Pants</a>
+      </nav>
+      <img src="./assets/images/main_photo.jpg" class="img-fluid mb-4" alt="">
+
+      
+      <div class="handbag">
+        <h3><a href="">Handbags</a></h3>
+        <p>Lorem ipsum dolor sit, amet consectetur. </p>
       </div>
-    </nav>
+      <div class="watch">
+        <h3><a href="">Watch</a></h3>
+        <p>Lorem ipsum dolor sit, amet consectetur.</p>
+      </div>
+      <div class="shoes">
+        <h3><a href="">Shoes</a></h3>
+        <p>Lorem ipsum dolor sit, amet consectetur.</p>
+      </div>
+    </div>
 
-  </header>
+    <main class="catalog p-4">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </main>
+  </div>
 
 </body>
 </html>
