--- a/index.html
+++ b/index.html
@@ -58,79 +58,97 @@
       </div>
     </div>
 
-    <main class="catalog p-4">
+    <main class="catalog p-4 mt-5">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_1.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86</p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_2.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86</p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_3.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86</p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_4.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86</p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_5.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86 <span class="text-secondary text-decoration-line-through">$ 172.98</span></p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_6.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86 <span class="text-secondary text-decoration-line-through">$ 172.98</span></p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_7.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86 <span class="text-secondary text-decoration-line-through">$ 172.98</span></p>
+          <button>Add to cart</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1641399122809-e3c85958eb67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbiUyMGZhc2hpb258ZW58MHwyfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="./assets/images/jacket_8.jpg" class="card-img-top" alt="...">
+        <div class="card-body text-center">
+          <a class="card-text" href="">Lorem ipsum dolor, sit amet consectetur adipisicing elit</a>
+          <p class="text-danger">$ 159.86 <span class="text-secondary text-decoration-line-through">$ 172.98</span></p>
+          <button>Add to cart</button>
         </div>
       </div>
+
+    </div>
     </main>
+  </div>
+  <hr>
+
+    <div class="info text-center p-4">
+      <div></div>
+      <div class="info-phone border-start border-end p-3">
+        <p class="fs-3">CALL US: (800) 2345-6789</p>
+        <p class="text-black-50">HOURS: 9AM-7PM PST M-FRI</p>
+      </div>
+      <div></div>
+    </div>
+
+  <hr>
+
+  <div class="container">
+    
   </div>
 
 </body>
