Completed full layout

--- a/index.html
+++ b/index.html
@@ -148,8 +148,43 @@
   <hr>
 
   <div class="container">
-    
+    <footer class="p-4">
+      <nav class="nav flex-column">
+        <h4 class="fw-bold">Information</h4>
+        <a class="nav-link border-bottom" href="#">About</a>
+        <a class="nav-link border-bottom" href="#">Delivery</a>
+        <a class="nav-link border-bottom" href="#">Privacy Policy</a>
+        <a class="nav-link" href="#">Terms & Conditions</a>
+      </nav>
+
+      <nav class="nav flex-column">
+        <h4 class="fw-bold">Customer Service</h4>
+        <a class="nav-link border-bottom" href="#">Contact Us</a>
+        <a class="nav-link border-bottom" href="#">Returns</a>
+        <a class="nav-link" href="#">Site Map</a>
+      </nav>
+
+      <nav class="nav flex-column">
+        <h4 class="fw-bold">Extras</h4>
+        <a class="nav-link border-bottom" href="#">Brands</a>
+        <a class="nav-link border-bottom" href="#">Gift Vouchers</a>
+        <a class="nav-link border-bottom" href="#">Affiliates</a>
+        <a class="nav-link" href="#">Specials</a>
+      </nav>
+
+      <nav class="nav flex-column">
+        <h4 class="fw-bold">My Account</h4>
+        <a class="nav-link border-bottom" href="#">My Account</a>
+        <a class="nav-link border-bottom" href="#">Order History</a>
+        <a class="nav-link border-bottom" href="#">Wish List</a>
+        <a class="nav-link" href="#">Newsletter</a>
+      </nav> 
+    </footer>
   </div>
+
+  <footer class="copyright bg-dark text-white">
+    <p>Powered by OpenCart	&#169; 2013</p>
+  </footer>
 
 </body>
 </html>
